Fixed broken layouts in employee screens

--- a/web/rainmaker/dev-packages/egov-ui-kit-dev/src/assets/styles/app.scss
+++ b/web/rainmaker/dev-packages/egov-ui-kit-dev/src/assets/styles/app.scss
@@ -240,14 +240,6 @@ body.employee-user-profile {
     display: none;
   }
 }
-.screen-title-label .label-text {
-  font-size: 20px !important;
-  font-weight: 400;
-  color: #484848;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 24px 17px 5px;
-}
 
 .title-white-background {
   background-color: #ffffff !important;
