--- a/web/rainmaker/packages/egov-ui-kit/assets/styles/app.scss
+++ b/web/rainmaker/packages/egov-ui-kit/assets/styles/app.scss
@@ -19,7 +19,8 @@ body h1,
 body h2,
 body h3,
 body h4 {
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
 }
 
 .screen {
@@ -239,14 +240,6 @@ body.employee-user-profile {
   .screen-title-label {
     display: none;
   }
-}
-.screen-title-label .label-text {
-  font-size: 20px !important;
-  font-weight: 400;
-  color: #484848;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 24px 17px 5px;
 }
 
 .title-white-background {
